tests/archived/snapshots/vp_create_request__sd-response.snap
---
source: tests/vp_create_request.rs
assertion_line: 53
expression: response
---
request_object:
  response_type: vp_token
  client_id: "http://localhost:8080/callback"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
